# rating_photo

./: .prospector.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  save_bd.py
app/: app.py  config.py  extensions.py  jwt.py
app/blueprints/: __init__.py
app/blueprints/answers/: __init__.py  view.py
app/blueprints/exceptions/: __init__.py  view.py
app/blueprints/users/: view.py
app/helpers/: __init__.py  executors.py  loaders.py  password_hasher.py  trace.py  validators.py
app/helpers/swagger/: __init__.py  docs.py  models.py
database/: .dockerignore  .isort.cfg  .prospector.yaml  README.md  __init__.py  alembic.ini  pyproject.toml
database/alembic/: env.py
database/alembic/versions/: 972a4f09b456_.py  a890ff05d489_.py  fbe3a0c677b4_.py
database/models/: __init__.py  assessment.py  db.py  photo.py  user.py
tests/: __init__.py  test.py  utils.py
