[tool.poetry]
name = "database"
version = "1.0.0"
description = "Общая база данных для всех микросервисов"
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
ddtrace = "^0.30"
gino = "^0.8"
alembic = "^1.2"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
prospector = "^1.1"
eralchemy = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
